--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "shadow-cljs": "^2.19.2"
   },
   "scripts": {
-    "dev": "npx shadow-cljs watch app"
+    "dev": "npx shadow-cljs watch app",
+    "repl": "npx shadow-cljs browser-repl"
   },
   "dependencies": {
     "react": "^17.0.2",
